Fix wrong css tag for spacing between user categories in user list sidebar

--- a/mininapse.css
+++ b/mininapse.css
@@ -232,7 +232,7 @@ Authors:
 }
 
 /* User list sidebar */
-#chat .user-mode::before {
+#chat .user-mode {
     padding: 12px 16px 0;
     margin-bottom: 0;
 }
